--- a/src/App.css
+++ b/src/App.css
@@ -40,5 +40,6 @@
 .esri-view-width-large .esri-popup__main-container,
 .esri-view-width-medium .esri-popup__main-container
 {
-    width: 650px !important;
+    width: 1100px !important;
+	min-height: 500px !important;
 }
