--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,29 @@
 .esri-view-width-large .esri-popup__main-container,
 .esri-view-width-medium .esri-popup__main-container
 {
-    width: 1100px !important;
+    width: 900px !important;
 	min-height: 500px !important;
 }
+
+.loader {
+
+	animation: spinner 4s linear infinite;
+  
+  
+  }
+  
+  
+   
+  
+  
+  @keyframes spinner {
+  
+  
+	0%, 20%, 50%, 80%, 100% {transform: translateY(0);} 
+	40% {transform: translateY(-30px);} 
+	60% {transform: translateY(-15px);} 
+  
+  
+  }
+  
+  
